# hop

./: .gitignore  .travis.yml  LICENSE  README.md  hop.cabal  stack.yaml
Console/: Color.hs
Data/String/: Parse.hs
Hop/: Config.hs  PullRequest.hs
src/: Main.hs
