name:                hop
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/NicolasDP/hop#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Di Prima
maintainer:          nicolas@di-prima.uk
copyright:           2016 Nicolas Di Prima
category:            Dev
build-type:          Simple
cabal-version:       >=1.10

executable hop
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cli
                     , shake
